<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_product"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/on_secondary"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_image"
            android:contentDescription="@string/product_image" />

        <Button
            android:id="@+id/imagePickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/select_image"
            style="@style/Widget.MaterialComponents.Button.TextButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            android:hint="@string/product_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/on_secondary"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            android:hint="@string/product_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/productTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/on_secondary"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            android:hint="@string/price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/on_secondary"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            android:hint="@string/tax"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taxInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/on_secondary"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            android:background="@color/status_bar_color"
            android:text="@string/add_product" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
